# jupyterlab_iframe

./: .bumpversion.cfg  .gitattributes  .gitignore  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.md  azure-pipelines.yml  jest.config.js  package.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  tsconfig.json
.github/workflows/: build.yml  publish.yml
binder/: landing.html  postBuild  requirements.txt
docs/: Makefile  api.md  conf.py  index.rst  make.bat
js/: .eslintrc.js  babel.config.js  jest.config.js  package.json  tsconfig.json  tsconfig.test.json
js/src/: SVGAssets.ts  activate.js  activate.ts  commands.js  commands.ts  dialog.js  dialog.ts  favicon.ts  faviconFetcher.ts  iframe.js  iframe.ts  iframeUtils.ts  index.js  index.ts  utils.ts
js/tests/: assetsTransformer.js  launcherMock.js
jupyter-config/jupyter_notebook_config.d/: jupyterlab_iframe.json
jupyterlab_iframe/: __init__.py  _version.py  extension.py  proxy.py
jupyterlab_iframe/extension/: jupyterlab_iframe.json
jupyterlab_iframe/tests/: test_all.py  test_extension.py  test_init.py
src/: index.ts
style/: index.css
tests/: test_all.py  test_extension.py  test_init.py
