[build-system]
requires = [
    "hatchling>=1.3.1",
    "jupyterlab>=4,<5",
]
build-backend = "hatchling.build"

[project]
name = "jupyterlab_iframe"
description = "IFrame widgets for JupyterLab"
version = "0.5.0"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
authors = [
    { name = "Tim Paine" },
]
keywords = [
    "Jupyter",
    "JupyterLab",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "jupyterlab>=4,<5",
    "requests>=2.22.0",
    "tornado-proxy-handlers>=0.0.4",
]

[project.optional-dependencies]
develop = [
    "check-manifest",
    "ruff",
    "pytest",
    "pytest-cov",
]
test = [
    "pytest",
    "pytest-cov",
]

[project.urls]
Repository = "https://github.com/timkpaine/jupyterlab_iframe"
Homepage = "https://github.com/timkpaine/jupyterlab_iframe"

[tool.check-manifest]
ignore = [
	"jupyterlab_iframe/labextension/**",
	"js/**"
]

[tool.hatch.build]
artifacts = [
    "jupyterlab_iframe/labextension"
]

[tool.hatch.build.targets.wheel.shared-data]
"jupyterlab_iframe/labextension" = "share/jupyter/labextensions/jupyterlab_iframe"
"jupyterlab_iframe/extension/install.json" = "share/jupyter/labextensions/jupyterlab_iframe/install.json"
"jupyterlab_iframe/extension/jupyterlab_iframe.json" = "etc/jupyter/jupyter_server_config.d/jupyterlab_iframe.json"
"jupyterlab_iframe/extension/notebook_commands" = "share/jupyter/notebook"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
    "binder",
    "docs",
]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "jupyterlab_iframe/labextension/package.json",
]
skip-if-exists = [
    "jupyterlab_iframe/labextension/package.json",
]
dependencies = [
    "hatch-jupyter-builder>=0.5.0",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
path = "js"
build_cmd = "build"

[tool.ruff]
line-length = 120

[tool.ruff.lint.isort]
combine-as-imports = true
default-section = "third-party"
known-first-party = ["jupyterlab_iframe"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
