[bumpversion]
current_version = 0.4.4
commit = True
tag = False

[bdist_wheel]
universal = 1

[metadata]
description_file = README.md

[flake8]
max-line-length = 200

[tool:pytest]
junit_family = xunit2

[bumpversion:file:jupyterlab_iframe/_version.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:js/package.json]
search = "version": "{current_version}"
replace = "version": "{new_version}"

[bumpversion:file:docs/conf.py]
search = version = "{current_version}"
replace = version = "{new_version}"

[check-manifest]
ignore = 
	jupyterlab_iframe/labextension/**
	js/**
